# emgene

./: Assignment.md  README.md  emgene.cabal
data/: GATA1.txt  model1.txt  model2.txt  test01  test02  test03  test04  test05  test06  test07  test08  test09  test10
src/: Alternative.hs  EM.hs  EMLike.hs  Formatting.hs  Main.hs  PWM.hs  Parser.hs  Util.hs
